# agent-presence

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: verification.md
packaging/: agent-presence.json.tmpl  agent-presence.rb.tmpl  publish.sh  release-notes.sh  render.sh
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
src/: config.rs  event.rs  hook.rs  install.rs  ipc.rs  main.rs  onboarding.rs  tui.rs  ui.rs
src/daemon/: focus.rs  mod.rs  presence.rs  registry.rs
src/discord/: mod.rs  transport.rs
